<resources>
    <string name="app_name">Collection</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="text_sign_up">Don\'t have account yet? Sign up now.</string>
    <string name="text_forgot_pass">Are you forgotten your password?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign up</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="change_password">Change password</string>
</resources>