<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".ui.LoginFragment">

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingTop="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="15dp"
        android:textColorHint="#7A7676"
        android:textSize="20sp"
        android:layout_marginTop="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingTop="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="15dp"
        android:textColorHint="#7A7676"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/email" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:padding="15dp"
        android:text="@string/login"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <TextView
        android:id="@+id/textSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_sign_up"
        android:textColor="@color/purple_500"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/btnLogin" />

    <TextView
        android:id="@+id/textForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_forgot_pass"
        android:gravity="center"
        android:textColor="@color/purple_500"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/textSignUp"/>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>